Add additional paragraph to docs about usage with jdk17.